--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,11 @@
 <body>
     <div class = 'container'>
         <h2>Wealth Management</h2>
+        <p>Please enter the username </p>
+        <form action = "/main" method="post">
+              <input type = 'text' name="q">
+              <input type = 'submit' value="Enter">
+        </form>
     </div>
 
 
