--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,7 @@
 <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-     <link rel="stylesheet" href="{{url_for('static',filename='style.csss')}}">
+
+    <meta name="viewport" content="width-device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}">
 
 </head>
 
@@ -10,13 +11,11 @@
         <form action="/" method="post">
             <input type="submit" value = "genAI">
         </form>
+        <form action="/SA" method="post">
+            <input type="submit" value = "Sentimental Analysis">
+        </form>
         <form action="/" method="post">
             <input type="submit" value = "Exit">
         </form>
     </div>
 </body>
-
-
-
-
-
