--- a/templates/main.html
+++ b/templates/main.html
@@ -14,6 +14,8 @@
         <form action="/SA" method="post">
             <input type="submit" value = "Sentimental Analysis">
         </form>
+        <form action="/paynow" method="post">
+            <input type="submit" value = "Transfer Money">
         <form action="/" method="post">
             <input type="submit" value = "Exit">
         </form>
